src/component/tabs/snapshots/envision__component__tabs__tests__view_chrome_owned_no_outer_border.snap
---
source: src/component/tabs/tests.rs
expression: terminal.backend().to_string()
---
  Home  │  Settings  │  Help
