src/component/tabs/snapshots/envision__component__tabs__tests__view_empty.snap
---
source: src/component/tabs/tests.rs
expression: terminal.backend().to_string()
---
┌──────────────────────────────────────┐
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
